# Q4-Hackathon-2-Evolution-of-todo-app

./: .env.example  .gitignore  AUDIT.md  AUTH_QUICKSTART.md  CONSTITUTION.md  PHASE_3_AUTH_COMPLETION_REPORT.md  README.md  package-lock.json  package.json  project.md  test_auth.py  vercel.json
.claude/agents/: cicd-workflow-manager.md  context-memory-manager.md  deployment-automation.md  event-reminder-processor.md  fastapi-backend-implementer.md  frontend-nextjs-builder.md  input-validator.md  mcp-tool-manager.md  monitoring-observability-analyst.md  orchestrator-router.md  qa-testing-validator.md  spec-manager.md  task-management-agent.md
.claude/skills/: README.md  (+5 more)
backend/: .dockerignore  DATABASE_SETUP.md  db.py  init_db.py  init_db.sh  main.py  pyproject.toml  requirements.txt
backend/auth/: __init__.py  jwt.py  middleware.py  rate_limiter.py  security.py
backend/models/: __init__.py  task.py  user.py
backend/routes/: __init__.py  auth.py  tasks.py
backend/schemas/: auth.py
backend/services/: __init__.py  task_service.py  user_service.py
frontend/: .dockerignore  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
huggingface/: CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  SIMPLE_DEPLOY_GUIDE.md  VISUAL_GUIDE.md  backend-Dockerfile  backend-README.md
phase-1-console/: clarify.md  console-todo-test.md  console-todo.py  implementation.md  plan.md  spec.md  tasks.md  test_app.py
phase-2-web/: CONSTITUTION.md  PHASE_2_COMPLETION_REPORT.md  PHASE_3_STATUS_UPDATE.md  QUICKSTART.md  STATUS.md  plan.md  spec.md  tasks.md
phase-3-chatbot/: COHERE_INTEGRATION.md  CURRENT_CONFIG.md  Dockerfile  README.md  README_HF_SPACE.md  SKILLS_INTEGRATION.md  plan.md  requirements.txt
(+91 files in other folders)
